--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Navaneeth kt</title>
+<title>I Am GKS</title>
       <link rel="stylesheet" href="styles.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
@@ -9,13 +9,16 @@
 <body bgcolor="#c3cfe2">
          <marquee>@kochi right now,feel free to contact me.let's have some coffee and talk some tech together...</marquee>
 <div class="center">
-<h1>Navaneeth kt</h1>
-<p>This is my personal website<br>
-I'm a Deep learning developer who actively working in tech communities, more&nbsp;<a href="about.html">about</a>&nbsp;me<br>
-for capturing more reference about my tech&nbsp;<a href="blog.html">blogs</a><br>
-i do love to write&nbsp;<a href="stories.html">stories</a><br>
-my opensourced and other&nbsp;<a href="projects.html">projects</a>&nbsp;found here<br>
-Let's make something awesome together, <a href="contact.html">get in touch </a></div>
-
+<h1>Gopikrishnan Sasikumar</h1>
+<p>This thing on? Hey, Dude.<br>
+If you find this recording, 
+don’t post it on social media. 
+It’s going to be a real joke-jerker.
+I don’t know if you’re ever going to read all these. 
+I build&nbsp;<a href="about.html">communities</a>&nbsp;me<br> for life and &nbsp;<a href="projects.html">AI</a>&nbsp; for living.
+You know, if it wasn’t for the existensial terror of not updating this website,
+I’d say, I’m running campus initiatives of TinkerHub currently.
+Sometimes I write &nbsp;<a href="blog.html">blogs</a><br>, You’d love it. Very informal. Only a tiny bit sadistic.
+Please know when you are stuck with learning ML, it's alright. I'll <a href="contact.html">help </a></div> you. Its always you.<br>
 </body>
 </html>
