--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ I build&nbsp;<a href="about.html">communities</a>&nbsp;me<br> for life and &nbsp
 You know, if it wasn’t for the existensial terror of not updating this website,
 I’d say, I’m running campus initiatives of TinkerHub currently.
 Sometimes I write &nbsp;<a href="blog.html">blogs</a><br>, You’d love it. Very informal. Only a tiny bit sadistic.
-Please know when you are stuck with learning ML, it's alright. I'll <a href="contact.html">help </a>you. It's always you.</div><br>
+Please know when you are stuck with learning ML, it's alright. I'll <a href="contact.html">help </a>you<br>. It's always you.</div>
 </body>
 </html>
