--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <div class="center">
 <h1>Gopikrishnan Sasikumar</h1>
 <p>This thing on? Hey, Dude.<br>
-If you find this recording, 
+If you find this website, 
 don’t post it on social media. 
 It’s going to be a real joke-jerker.
 I don’t know if you’re ever going to read all these. 
 I build&nbsp;<a href="about.html">communities</a>&nbsp;me<br> for life and &nbsp;<a href="projects.html">AI</a>&nbsp; for living.
 You know, if it wasn’t for the existensial terror of not updating this website,
 I’d say, I’m running campus initiatives of TinkerHub currently.
-Sometimes I write &nbsp;<a href="blog.html">blogs</a><br>, You’d love it. Very informal. Only a tiny bit sadistic.
+Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br> Very informal. Only a tiny bit sadistic.
 Please know when you are stuck with learning ML, it's alright. I'll <a href="contact.html">help </a>you<br>. It's always you.</div>
 </body>
 </html>
