--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ I don’t know if you’re ever going to read all these.
 I build&nbsp;<a href="about.html">communities</a>&nbsp;me<br> for life and &nbsp;<a href="projects.html">AI</a>&nbsp; for living.
 You know, if it wasn’t for the existensial terror of not updating this website,
 I’d say, I’m running campus initiatives of TinkerHub currently.
-Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it. Very informal. Only a tiny bit sadistic.
-Please know when you are stuck with learning ML, it's alright. I'll <a href="contact.html">help </a>you<br>. It's always you.</div>
+Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it. Very informal. Only a tiny bit sadistic.<br>
+Please know when you are stuck with learning ML, it's alright. I'll <a href="contact.html">help </a>you. It's always you.</div>
 </body>
 </html>
