--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ If you find this website,
 don’t post it on social media. 
 It’s going to be a real joke-jerker.
 I don’t know if you’re ever going to read all these. 
-I build&nbsp;<a href="about.html">communities</a>&nbsp;me<br> for life and &nbsp;<a href="projects.html">AI</a>&nbsp; for living.
+I build&nbsp;<a href="about.html">communities</a>&nbsp;<br> for life and &nbsp;<a href="projects.html">AI</a>&nbsp; for living.
 You know, if it wasn’t for the existensial terror of not updating this website,
 I’d say, I’m running campus initiatives of TinkerHub currently.
 Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it. Very informal. Only a tiny bit sadistic.<br>
