--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ You know, if it wasn’t for the existensial terror of not updating this website
 I’d say, I’m running campus initiatives of TinkerHub currently.
 Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it. Very informal. Only a tiny bit sadistic.<br>
 Please know when you are stuck with learning ML, it's alright. 
-I'll <a href="contact.html">help </a>you. 
+I'll <a href="contact.html">help </a>you.<br>
 It's always you.</div>
 </body>
 </html>
