--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <h1>Gopikrishnan Sasikumar</h1>
 <p>This thing on? Hey, Dude.<br>
 If you find this website, 
-don’t post it on social media. 
-It’s going to be a real joke-jerker.
-I don’t know if you’re ever going to read all these. 
+don’t post it on social media.<br> 
+It’s going to be a real joke-jerker.<br>
+I don’t know if you’re ever going to read all these.<br> 
 I build&nbsp;<a href="about.html">communities</a>&nbsp;<br> for life and &nbsp;<a href="projects.html">AI</a>&nbsp; for living.
 You know, if it wasn’t for the existensial terror of not updating this website,
 I’d say, I’m running campus initiatives of TinkerHub currently.
