--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 <body bgcolor="#c3cfe2">
 
 <h1>Blog</h1>
-<blockquote class="embedly-card"><h4><a href="https://medium.com/@navaneethkt">Navaneeth Kt - Medium</a></h4><p>Read writing from Navaneeth Kt on Medium. navaneeth@lisa:~$ machine learning devotee \ full stack dreamer \ nyctophilist. Every day, Navaneeth Kt and thousands of other voices read, write, and share important stories on Medium.</p></blockquote>
+<blockquote class="embedly-card"><h4><a href="https://medium.com/@gksoriginal">Gopikrishnan Sasikumar - Medium</a></h4><p>Read writing from GKS on Medium. Every day, GKS and thousands of other voices read, write, and share important stories on Medium.</p></blockquote>
 <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
 
 <!DOCTYPE html>
