--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
 <title>Contact<title/>
 <body>
-<center><img src="0001.jpg" height="132.28346457" width="132.28346457"> <center> 
+<center><img src="0001.jpg" height="132.28346457" width="132.28346457"></center> 
 <body/>
 <html/>
