--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
 <title>Contact</title>
 <body>
-<center><img src="0001.jpg" height="250" width="250"></center> 
+<center><img src="0001.jpg" height="250" width="250" class="center"></center> 
 </body>
 </html>
