--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Navaneeth kt</title>
+<title>GKS github</title>
 </head>
 <body bgcolor="#c3cfe2">
 
 <h1>Projects</h1>
-  <p>Opensouced projects @&nbsp;<a href="https://github.com/Navan0/">GitHub</a><br>
+  <p>Opensouced projects @&nbsp;<a href="https://github.com/GopikrishnanSasikumar/">GitHub</a><br>
 </body>
 </html>
