--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
 </head>
-<body bgcolor="#c3cfe2">
+<body bgcolor="#000000">
          <marquee>@kochi right now,feel free to contact me.let's have some coffee and talk some tech together...</marquee>
 <div class="center">
 <h1>Gopikrishnan Sasikumar</h1>
