--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,12 @@
 
 
 <html>
-<head>
+  <head>
+<link rel="stylesheet" href="styles.css">
+      <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+
+</head>
+<body bgcolor="#000000" <body link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
 <title>Navaneeth kt</title>
 </head>
 <body bgcolor="#c3cfe2">
