--- a/blog.html
+++ b/blog.html
@@ -6,12 +6,11 @@
       <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
 </head>
-<title>Navaneeth kt</title>
+<title>Blogs</title>
 </head>
 <body bgcolor="#000000" <body link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
 <h1>Blog</h1>
-<blockquote class="embedly-card"><h4><a href="https://medium.com/@gksoriginal">Gopikrishnan Sasikumar - Medium</a></h4><p>Read writing from GKS on Medium. Every day, GKS and thousands of other voices read, write, and share important stories on Medium.</p></blockquote>
-<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+
 
 <!DOCTYPE html>
 </body>
