--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
 <title>GKS github</title>
 </head>
-<body bgcolor="#c3cfe2">
+<body bgcolor="#000000" <body link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
 
 <h1>Projects</h1>
   <p>Opensouced projects @&nbsp;<a href="https://github.com/GopikrishnanSasikumar/">GitHub</a><br>
