--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 <head>
 <title>About</title>
 </head>
-<body>
+<body bgcolor="#000000" <body link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
 
 <h1>About</h1>
-<p></p>
+<p>I'm sorry! Earth is closed today. You better pack it up and get outta here.<p>
 
 </body>
 </html>
