--- a/about.html
+++ b/about.html
@@ -3,8 +3,7 @@
 <head>
 <title>About</title>
 </head>
-<body bgcolor="#000000" link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
-
+<body bgcolor="#000000" <body link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
 <h1>About</h1>
 <p>I'm sorry! Earth is closed today. You better pack it up and get outta here.<p>
 
