--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
 </head>
-<body bgcolor="#000000" <body link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
+<body bgcolor="#000000" link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
          
 <div class="center">
 <h1>Gopikrishnan Sasikumar</h1>
