--- a/about.html
+++ b/about.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>About</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+
 </head>
 <body bgcolor="#000000" link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
 <h1>About</h1>
