--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 <html>
 <title>Contact</title>
 <body>
-<center><img src="0001.jpg" height="750" width="750" class="center"></center> 
+<div class="center">
+<img src="0001.jpg" height="750" width="750" class="center"> 
+</div>
 </body>
 </html>
