--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,9 @@
 
 </head>
 <body bgcolor="#000000" link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
-
+<div class="center">
 <h1>Projects</h1>
   <p>Opensouced projects @&nbsp;<a href="https://github.com/GopikrishnanSasikumar/">GitHub</a><br>
 </body>
+</div>
 </html>
