--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ I build&nbsp;<a href="about.html">communities</a>&nbsp;for life and &nbsp;<a hre
 You know, if it isn’t for the existensial terror of not updating this website,
 I’d say, I’m running campus initiatives of TinkerHub currently.<br>
 Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it. Very informal. Only a tiny bit sadistic.<br>
-Please know when you are stuck with learning ML, it's alright. 
-I'll <a href="contact.html">help</a> you.<br>
-It's always you.</div>
+Please know when you are stuck with learning ML, it's alright.<br>
+I'll <a href="contact.html">help</a> you.</div>
+It's 
 </body>
 </html>
