--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div class="center">
 <h1>Gopikrishnan Sasikumar</h1>
 <p>This thing on? Hey, Dude.<br>
-If you find this website, 
-don’t post it on social media.
+If you find this website,<br>
+don’t post it on social media.<br>
 It’s going to be a real joke-jerker.<br>
 
 I build&nbsp;<a href="about.html">communities</a>&nbsp;for life and &nbsp;<a href="projects.html">AI</a>&nbsp;for living.<br>
