--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ It’s going to be a real joke-jerker.<br>
 I build&nbsp;<a href="about.html">communities</a>&nbsp;for life and &nbsp;<a href="projects.html">AI</a>&nbsp;for living.<br>
 You know, if it isn’t for the existensial terror of not updating this website,
 I’d say, I’m running campus initiatives of TinkerHub currently.<br>
-Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it. Very informal. Only a tiny bit sadistic.<br>
+Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br> 
+Very informal. Only a tiny bit sadistic.<br>
 Please know when you are stuck with learning ML, it's alright.<br>
 I'll <a href="contact.html">help</a> you.</div>
 
