--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ You know, if it isn’t for the existensial terror of not updating this website,
 I’d say, I’m running campus initiatives of TinkerHub currently.<br>
 Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br> 
 Very informal. Only a tiny bit sadistic.<br>
-Please know when you are stuck with learning ML, it's alright.<br>
+Please know when you are stuck with learning Machine Learning, it's alright.<br>
 I'll <a href="contact.html">help</a> you.</div>
 
 </body>
