--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br>
 Very informal. Only a tiny bit sadistic.<br>
 Please know when you are stuck with learning Machine Learning, it's alright.<br>
 I'll <a href="contact.html">help</a> you.</div>
+         
+</div>
+<div class="infinity-gauntlet"></div>
 
 </body>
 </html>
