Make content centered

--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>I Am GKS</title>
-<link rel="stylesheet" href="styles.css">
-<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-</head>
-<body bgcolor="#000000" link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
-         
-<div class="center">
-<h1>Gopikrishnan Sasikumar</h1>
-<p>This thing on? Hey, Dude.<br>
-If you find this website,<br>
-don’t post it on social media.<br>
-It’s going to be a real joke-jerker.<br>
-
-I build&nbsp;<a href="about.html">communities</a>&nbsp;for life and &nbsp;<a href="projects.html">AI</a>&nbsp;for living.<br>
-You know, if it isn’t for the existensial terror of not updating this website,
-I’d say, I’m running campus initiatives of TinkerHub currently.<br>
-Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br> 
-Very informal. Only a tiny bit sadistic.<br>
-Please know when you are stuck with learning Machine Learning, it's alright.<br>
-I'll <a href="contact.html">help</a> you.</div>
-         
+	<head>
+		<link rel="stylesheet" href="styles.css" />
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>I Am GKS</title>
+	</head>
+<body>
+	<div class="center">
+		<div class="center-wrap">
+			<div class="center-content">
+				<h1>Gopikrishnan Sasikumar</h1>
+				<p>This thing on? Hey, Dude.<br />
+				If you find this website,<br />
+				don’t post it on social media.<br />
+				It’s going to be a real joke-jerker.<br />
+				I build&nbsp;<a href="about.html">communities</a>&nbsp;for life and &nbsp;<a href="projects.html">AI</a>&nbsp;for living.<br />
+				You know, if it isn’t for the existensial terror of not updating this website,
+				I’d say, I’m running campus initiatives of TinkerHub currently.<br />
+				Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br />
+				Very informal. Only a tiny bit sadistic.<br />
+				Please know when you are stuck with learning Machine Learning, it's alright.<br />
+				I'll <a href="contact.html">help</a> you.
+			</div>
+		</div>
+	</div>
 </body>
 </html>
