--- a/about.html
+++ b/about.html
@@ -8,8 +8,12 @@
 </head>
 <body bgcolor="#000000" link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
 <div class="center">
+<div class="center-wrap">
+<div class="center-content">
 <h1>About</h1>
 <p>I'm sorry! About is closed today. You better pack it up and get outta here.</p>
+</div>
+</div>
 </div>
 </body>
 </html>
