--- a/projects.html
+++ b/projects.html
@@ -8,8 +8,12 @@
 </head>
 <body bgcolor="#000000" link="#67e4e5" vlink="#67e4e5" alink="#67e4e5">
 <div class="center">
+<div class="center-wrap">
+<div class="center-content">
 <h1>Projects</h1>
   <p>Opensourced projects @&nbsp;<a href="https://github.com/GopikrishnanSasikumar/">GitHub</a><br>
 </body>
+</div>
+</div>
 </div>
 </html>
