--- a/index.html
+++ b/index.html
@@ -12,16 +12,11 @@
 			<div class="center-content">
 				<h1>Gopikrishnan Sasikumar</h1>
 				<p>This thing on? Hey, Dude.<br />
-				If you find this website,<br />
-				don’t post it on social media.<br />
-				It’s going to be a real joke-jerker.<br />
 				I build&nbsp;<a href="about.html">communities</a>&nbsp;for life and &nbsp;<a href="projects.html">AI</a>&nbsp;for living.<br />
 				You know, if it isn’t for the existensial terror of not updating this website,
 				I’d say, I’m running campus initiatives of TinkerHub currently.<br />
 				Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br />
-				Very informal. Only a tiny bit sadistic.<br />
-				Please know when you are stuck with learning Machine Learning, it's alright.<br />
-				I'll <a href="contact.html">help</a> you.
+				Please know if you are stuck with learning Machine Learning, I'll <a href="contact.html">help</a> you.<br />
 			</div>
 		</div>
 	</div>
