--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<h1>Gopikrishnan Sasikumar</h1>
 				<p>This thing on? Hey, Dude.<br />
 				I build&nbsp;<a href="about.html">communities</a>&nbsp;for life and &nbsp;<a href="projects.html">AI</a>&nbsp;for living.<br />
-				You know, if it isn’t for the existensial terror of not updating this website,
+				You know, if it isn’t for the existensial terror of not updating this website,<br />
 				I’d say, I’m running campus initiatives of TinkerHub currently.<br />
 				Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br />
 				Please know if you are stuck with learning Machine Learning, I'll <a href="contact.html">help</a> you.<br />
