--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,8 @@
 <html>
+<head>
 <title>Contact</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
 <body>
 <div class="center">
 <img src="0001.jpg" height="750" width="750" class="center"> 
