--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			<div class="center-content">
 				<h1>Gopikrishnan Sasikumar</h1>
 				<p>This thing on? Hey, Dude.<br />
-				I build&nbsp;<a href="about.html">communities</a>&nbsp; and &nbsp;<a href="projects.html">AI</a>&nbsp;products.
-				I’m running Campus Initiatives of TinkerHub currently.
-				Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.
+				I build&nbsp;<a href="about.html">communities</a>&nbsp; and &nbsp;<a href="projects.html">AI</a>&nbsp;products.<br />
+				I’m running Campus Initiatives of TinkerHub currently.<br />
+				Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br />
 				Please know if you are stuck with learning Machine Learning,<br />
 				I'll <a href="contact.html">help</a> you.<br />
 			</div>
