--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				I'm an&nbsp;<a href="projects.html">engineer</a>&nbsp; and I build&nbsp;<a href="about.html">communities.</a>&nbsp;<br />
 				Running Campus Initiatives of TinkerHub currently.<br />
 				Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br />
-				Please know if you are stuck with learning Machine Learning,<br />
+				Please know if you are stuck with Machine Learning,<br />
 				I'll <a href="contact.html">help</a> you.<br />
 			</div>
 		</div>
