--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>I Am GKS</title>
 	</head>
 <body>
+	<marquee>Thanks MCU for giving me an awesome childhood!</marquee>
 	<div class="center">
 		<div class="center-wrap">
 			<div class="center-content">
