--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 			</div>
 		</div>
 	</div>
+	<footer>&copy; Copyright 2019 by Gopikrishnan Sasikumar <a href="www.github.com/GopikrishnanSasikumar">Github Repository</a></footer>
 </body>
 </html>
