--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Contact</title>
+<link rel="stylesheet" href="styles.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
