--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-<div class="footer-social-icons">
-    <ul class="social-icons">
-        <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
-    </ul>
+<div class="center">
+		<div class="center-wrap">
+			<div class="center-content">
+                <div class="footer-social-icons">
+                    <ul class="social-icons">
+                        <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+                        <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+                        <li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>
+                        <li><a href="" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
+                        <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 </div>
 </body>
 </html>
