--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <div class="center">
-		<div class="center-wrap">
-			<div class="center-content">
+	<div class="center-wrap">
+            <div class="center-content">
+		<h1>Connect me</h1>
                 <div class="footer-social-icons">
                     <ul class="social-icons">
                         <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
