--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
                     <ul class="social-icons">
                         <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
                         <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-                        <li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>
-                        <li><a href="" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
+                        <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+                        <li><a href="" class="social-icon"> <i class="fa fa-medium"></i></a></li>
                         <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="" class="social-icon"> <i class="fa fa-github"></i></a></li>
                     </ul>
                 </div>
             </div>
