--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,12 @@
 		<h1>Connect me</h1>
                 <div class="footer-social-icons">
                     <ul class="social-icons">
-                        <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-                        <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-                        <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-                        <li><a href="" class="social-icon"> <i class="fa fa-medium"></i></a></li>
-                        <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="" class="social-icon"> <i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.facebook.com/gopikrishnansasikumar" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/gksoriginal" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/gksoriginal/" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.medium.com/@gksoriginal/" class="social-icon"> <i class="fa fa-medium"></i></a></li>
+                        <li><a href="https://in.linkedin.com/in/gopikrishnan-sasikumar-813a02121" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://www.github.com/GopikrishnanSasikumar" class="social-icon"> <i class="fa fa-github"></i></a></li>
                     </ul>
                 </div>
             </div>
