--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
                 <div class="footer-social-icons">
 		    <h1>Connect me</h1>
                     <ul class="social-icons">
-                        <li><a href="https://www.facebook.com/gopikrishnansasikumar" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+                        <li><a href="mailto:gks@tinkerhub.org" class="social-icon"> <i class="fa fa-envelope"></i></a></li>
                         <li><a href="https://twitter.com/gksoriginal" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
                         <li><a href="https://www.instagram.com/gksoriginal/" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
                         <li><a href="https://www.medium.com/@gksoriginal/" class="social-icon"> <i class="fa fa-medium"></i></a></li>
