--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <div class="center-wrap">
 <div class="center-content">
 <h1>Projects</h1>
-  <p>Opensourced projects @&nbsp;<a href="https://www.github.com/GopikrishnanSasikumar" class="social-icon"> <i class="fa fa-github"></i></a>
+  <p>Opensourced projects @&nbsp;<a href="https://www.github.com/GopikrishnanSasikumar" class="social-icon"> <i class="fa fa-github"></i></a><br>
 
 </p>
 </div>
