--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 		<title>I Am GKS</title>
 	</head>
 <body>
-	<marquee>Thanks MCU for giving me an awesome childhood!</marquee>
 	<div class="center">
 		<div class="center-wrap">
 			<div class="center-content">
@@ -18,6 +17,9 @@
 				Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br />
 				Please know if you are stuck with Machine Learning,<br />
 				I'll <a href="contact.html">help</a> you.<br />
+				<footer>
+        				<small>&copy; Copyright 2019, Gopikrishnan Sasikumar <a href="https://www.github.com/GopikrishnanSasikumar" class="social-icon"> <i class="fa fa-github"></i></small>
+				</footer>
 			</div>
 		</div>
 	</div>
