--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 				Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br />
 				Please know if you are stuck with Machine Learning,<br />
 				I'll <a href="contact.html">help</a> you.<br />
-				
+				<ul class="social-icons">
+                        		<li><a href="mailto:gks@tinkerhub.org" class="social-icon"> <i class="fa fa-envelope"></i></a></li>
+                        		<li><a href="https://twitter.com/gksoriginal" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+                        		<li><a href="https://www.instagram.com/gksoriginal/" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+                        		<li><a href="https://www.medium.com/@gksoriginal/" class="social-icon"> <i class="fa fa-medium"></i></a></li>
+                        		<li><a href="https://in.linkedin.com/in/gopikrishnan-sasikumar-813a02121" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+                       		</ul>
 				<footer>
         				<small>&copy; Copyright 2019, Gopikrishnan Sasikumar <a href="https://www.github.com/GopikrishnanSasikumar" class="social-icon"> <i class="fa fa-github"></i></small>
 				</footer>
