--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				Running Campus Initiatives of TinkerHub currently.<br />
 				Sometimes I write &nbsp;<a href="blog.html">blogs</a>, You’d love it.<br />
 				Please know if you are stuck with Machine Learning,<br />
-				I'll <a href="contact.html">help</a> you.<br />
+				I'll help you.<br />
 				<ul class="social-icons">
                         		<li><a href="mailto:gks@tinkerhub.org" class="social-icon"> <i class="fa fa-envelope"></i></a></li>
                         		<li><a href="https://twitter.com/gksoriginal" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
