--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="styles.css" />
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>I Am GKS</title>
+		<title>Home : Gopikrishnan Sasikumar</title>
 	</head>
 <body>
 	<div class="center">
