--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<p>This thing on? Hey, Dude.<br />
 				I'm an&nbsp;<a href="projects.html">engineer</a>&nbsp; and I build&nbsp;<a href="about.html">communities</a>.<br />
 				Running Campus Initiatives of TinkerHub currently.<br />
-				Sometimes I write &nbsp;<a href="https://www.medium.com/@gksoriginal">blogs</a>, You’d love it.<br />
+				Sometimes I write &nbsp;<a href="blogs.html">blogs</a>, You’d love it.<br />
 				<ul class="social-icons">
                         		<li><a href="mailto:gks@tinkerhub.org" class="social-icon"> <i class="fa fa-envelope"></i></a></li>
                         		<li><a href="https://twitter.com/gksoriginal" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
