--- a/blogs.html
+++ b/blogs.html
@@ -21,7 +21,7 @@
             					<li><a href="https://medium.com/@gksoriginal/laws-of-building-a-community-c60d06b4a3c8" class="social-icon"> <i class="fa fa-medium"></i></a></li>
         					</ul>
 					<h2>I am Ironman</h2>
-					<p>How I built a campus community</p>
+					<p>My life story and my first blog!</p>
 						<ul class="social-icons">
             					<li><a href="https://medium.com/@gksoriginal/i-am-ironman-436b65a48802" class="social-icon"> <i class="fa fa-medium"></i></a></li>
         					</ul>
