--- a/blogs.html
+++ b/blogs.html
@@ -10,17 +10,17 @@
 		<div class="center-wrap">
 			<div class="center-content">
 				<h1>Blogs</h1>
-					<h2>Intro to Machine Learning</h2>
-        				<p>This will help you get started with Machine Learning</p>
+					<h2>Intro to Machine Learning.</h2>
+        				<p>This will help you get started with Machine Learning.</p>
 						<ul class="social-icons">
             						<li><a href="https://blog.goodaudience.com/get-started-with-machine-learning-a1464de4a835" class="social-icon"> <i class="fa fa-medium"></i></a></li>
         					</ul>
-					<h2>Laws of building a community</h2>
-					<p>How I built a campus community in college</p>
+					<h2>Laws of building a community.</h2>
+					<p>How I built a campus community in college.</p>
 						<ul class="social-icons">
             					<li><a href="https://medium.com/@gksoriginal/laws-of-building-a-community-c60d06b4a3c8" class="social-icon"> <i class="fa fa-medium"></i></a></li>
         					</ul>
-					<h2>I am Ironman</h2>
+					<h2>I am Ironman.</h2>
 					<p>My life story and my first blog!</p>
 						<ul class="social-icons">
             					<li><a href="https://medium.com/@gksoriginal/i-am-ironman-436b65a48802" class="social-icon"> <i class="fa fa-medium"></i></a></li>
