Update and rename about.html to communities.html

--- a/communities.html
+++ b/communities.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About</title>
+<title>Communities</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#67E4E5">
   <link rel="stylesheet" href="styles.css">
@@ -13,7 +13,7 @@
 <div class="center-wrap">
 <div class="center-content">
 <h1>About</h1>
-<p>I'm sorry! About is closed today. You better pack it up and get outta here.</p>
+<p>I'm sorry! Communities page is closed today. You better pack it up and get outta here.</p>
 </div>
 </div>
 </div>
