--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="center-content">
 				<h1>Gopikrishnan Sasikumar</h1>
 				<p>This thing on? Hey, Dude.<br />
-				I'm an&nbsp;<a href="projects.html">engineer</a>&nbsp; and I build&nbsp;<a href="about.html">communities</a>.<br />
+				I'm an&nbsp;<a href="projects.html">engineer</a>&nbsp; and I build&nbsp;<a href="communities.html">communities</a>.<br />
 				Running Campus Initiatives of TinkerHub currently.<br />
 				Sometimes I write &nbsp;<a href="blogs.html">blogs</a>, You’d love it.<br />
 				<ul class="social-icons">
