--- a/communities.html
+++ b/communities.html
@@ -12,7 +12,7 @@
 <div class="center">
 <div class="center-wrap">
 <div class="center-content">
-<h1>About</h1>
+<h1>Communities</h1>
 <p>I'm sorry! Communities page is closed today. You better pack it up and get outta here.</p>
 </div>
 </div>
