--- a/communities.html
+++ b/communities.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Communities</title>
+<title>Communities : Gopikirshnan Sasikumar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#67E4E5">
   <link rel="stylesheet" href="styles.css">
