--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="theme-color" content="#67E4E5">
-<title>GKS github</title>
+<title>Projects : Gopikrishnan Sasikumar</title>
 <link rel="stylesheet" href="styles.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
