--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="styles.css" />
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" />
 		<meta name="theme-color" content="#67E4E5">
 		<title>Home : Gopikrishnan Sasikumar</title>
 	</head>
