--- a/blogs.html
+++ b/blogs.html
@@ -11,7 +11,7 @@
 		<div class="center-wrap">
 			<div class="center-content">
 				<h1>Blogs</h1>
-					<h2>Intro to Machine Learning.</h2>
+					<h2 class="social-icons">Intro to Machine Learning. <a href="https://blog.goodaudience.com/get-started-with-machine-learning-a1464de4a835" class="social-icon"> <i class="fa fa-medium"></i></a></h2>
         				<p>This will help you get started with Machine Learning.</p>
 						<ul class="social-icons">
             						<li><a href="https://blog.goodaudience.com/get-started-with-machine-learning-a1464de4a835" class="social-icon"> <i class="fa fa-medium"></i></a></li>
