--- a/blogs.html
+++ b/blogs.html
@@ -13,7 +13,7 @@
 				<h1>Blogs</h1>
 					<h2 class="social-icons">Intro to Machine Learning. <a href="https://blog.goodaudience.com/get-started-with-machine-learning-a1464de4a835" class="social-icon"> <i class="fa fa-medium"></i></a></h2>
         				<p>This will help you get started with Machine Learning.</p>
-					<h2 class="social-icons">Laws of building a community. <a href="https://medium.com/@gksoriginal/laws-of-building-a-community-c60d06b4a3c8" class="social-icon"> <i class="fa fa-medium"></i></a><</h2>
+					<h2 class="social-icons">Laws of building a community. <a href="https://medium.com/@gksoriginal/laws-of-building-a-community-c60d06b4a3c8" class="social-icon"> <i class="fa fa-medium"></i></a></h2>
 					<p>How I built a campus community in college.</p>
 					<h2 class="social-icons">I am Ironman. <a href="https://medium.com/@gksoriginal/i-am-ironman-436b65a48802" class="social-icon"> <i class="fa fa-medium"></i></a></h2>
 					<p>My life story and my first blog!</p>
