--- a/blogs.html
+++ b/blogs.html
@@ -10,7 +10,9 @@
 	<div class="center">
 		<div class="center-wrap">
 			<div class="center-content">
+				<div class="underline">
 				<h1>Blogs</h1>
+				</div>
 					<h2 class="social-icons">Intro to Machine Learning. <a href="https://blog.goodaudience.com/get-started-with-machine-learning-a1464de4a835" class="social-icon"> <i class="fa fa-medium"></i></a></h2>
         				<p>This will help you get started with Machine Learning.</p>
 					<h2 class="social-icons">Laws of building a community. <a href="https://medium.com/@gksoriginal/laws-of-building-a-community-c60d06b4a3c8" class="social-icon"> <i class="fa fa-medium"></i></a></h2>
