--- a/communities.html
+++ b/communities.html
@@ -12,7 +12,9 @@
 <div class="center">
 <div class="center-wrap">
 <div class="center-content">
+<div class="underline">
 <h1>Communities</h1>
+</div>
 <p>I'm sorry! Communities page is closed today. You better pack it up and get outta here.</p>
 </div>
 </div>
