--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,9 @@
 <div class="center">
 <div class="center-wrap">
 <div class="center-content">
+<div class="underline">
 <h1>Projects</h1>
+</div>
   <p>Opensourced projects @ <a href="https://www.github.com/GopikrishnanSasikumar" class="social-icon"> <i class="fa fa-github"></i></a><br>
 
 </p>
