--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 				<h1>Gopikrishnan Sasikumar</h1>
 				<p>This thing on? Hey, Dude.<br />
 				I'm an&nbsp;<a href="projects.html">engineer</a>&nbsp; and I build&nbsp;<a href="communities.html">communities</a>.<br />
+				Machine Learning Engineer @ <a href="https://www.fullcontact.com">FullContact</a>.<br />
 				Running Campus Initiatives of&nbsp;<a href="https://www.tinkerhub.org">TinkerHub</a> currently.<br />
 				Sometimes I write &nbsp;<a href="blogs.html">blogs</a>, You’d love it.<br />
 				<ul class="social-icons">
