--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 			<div class="center-content">
 				<h1>Gopikrishnan Sasikumar</h1>
 				<p>This thing on? Hey, Dude.<br />
-				I'm an&nbsp;<a href="projects.html">engineer</a>.&nbsp;Currently doing<br />
-				Machine Learning @ <a href="https://www.fullcontact.com">FullContact</a>.<br />
-				I build&nbsp;<a href="communities.html">communities</a> and running<br />
-				Campus Initiatives of&nbsp;<a href="https://www.tinkerhub.org">TinkerHub</a>.<br />
+				I'm an&nbsp;<a href="projects.html">engineer</a>.&nbsp;Currently doing machine learning @ <a href="https://www.fullcontact.com">FullContact</a>.<br />
+				I build&nbsp;<a href="communities.html">communities</a> and running Campus Initiatives of&nbsp;<a href="https://www.tinkerhub.org">TinkerHub</a>.<br />
 				Sometimes I write &nbsp;<a href="blogs.html">blogs</a>, You’d love it.<br />
 				<ul class="social-icons">
                         		<li><a href="mailto:gks@tinkerhub.org" class="social-icon"> <i class="fa fa-envelope"></i></a></li>
